--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="col-md-8">
                     <p>
                         Kuldeep is a quick learner and adaptable to any technology. He has great taste for Machine Learning and Data Science. He is continuosly learning to make his development skills better. He loves to build the great Product. He is working towards the Artificial Intelligence to make contributions to Health Care Industry and help the Community.
-                        He is also good at managing people. 
+                        Kuldeep is also good at managing people. 
                     </p>
                 </div>
             </div>
