--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                     <div class="project-info">
                         <h3>Python Automations</h3>
                         <p>
-                            <h4>Email Automation</h4>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                            <h4>What's app Automation</h4>
-                            Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat
+                            <h4>Email and Mobile No. Extractor</h4>
+			    It will extract all th emails and mobile numbers from a text file.
+                            <h4>PDF Merge</h4>
+			    It will merge all the seperate pdf's to one pdf.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/kuldeep27396/Python-Automations">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -234,7 +234,7 @@
         
                             The online portfolio that you are looking at presently is one of the projects I wanted to do. I have used Bootstrap and Javascript along with basic Web Technologies.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/kuldeep27396/kuldeep27396.github.io">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
