--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
                         <h3>Python Automations</h3>
                         <p>
                             <h4>Email and Mobile No. Extractor</h4>
-			    It will extract all th emails and mobile numbers from a text file.
+			    <p>It will extract all th emails and mobile numbers from a text file.</p>
                             <h4>PDF Merge</h4>
-			    It will merge all the seperate pdf's to one pdf.
+			    <p>It will merge all the seperate pdf's to one pdf.</p>
                         </p>
                         <a href="https://github.com/kuldeep27396/Python-Automations">View Project</a>
                     </div>
