--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <h3>Python Automations</h3>
                         <p>
                             <h4>Email and Mobile No. Extractor</h4>
-			    <p>It will extract all th emails and mobile numbers from a text file.</p>
+			    <p>It will extract all the emails and mobile numbers from a text file.</p>
                             <h4>PDF Merge</h4>
 			    <p>It will merge all the seperate pdf's to one pdf.</p>
                         </p>
