--- a/index.html
+++ b/index.html
@@ -172,30 +172,33 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/project4.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Predicting Amazon Product Reviews: Case Study</h3>
+                        <h5>Machine Learning </h5>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                           The ability to successfully decide whether a review will be helpful to other customers and thus give the product more exposure is vital to companies that support these reviews, companies like Google, Amazon and Yelp!. 
+                        
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">Will be updated soon</a>
                     </div>
                     <!-- End .project-info -->
 
                 </div>
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/project3.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Medicare Reprotech</h3>
+                        <h5>Web Development: Python, Django, Web Technologies, Web Services</h5>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Medicare Reprotech is a Web Application to take reports of patients in an efficient manner so that the patient and doctor both not have to handle reports and these reports will be available to him/her on authentication.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">Will be updated soon</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -210,9 +213,9 @@
                         <h3>Python Automations</h3>
                         <p>
                             <h4>Email and Mobile No. Extractor</h4>
-			    <p>It will extract all the emails and mobile numbers from a text file.</p>
+			              <p>It will extract all the emails and mobile numbers from a Text containing email's and phone number to be pasted from clipboard. Used regular expressions and python libraries.</p>
                             <h4>PDF Merge</h4>
-			    <p>It will merge all the seperate pdf's to one pdf.</p>
+			             <p>It will merge all the seperate pdf's to one pdf.</p>
                         </p>
                         <a href="https://github.com/kuldeep27396/Python-Automations">View Project</a>
                     </div>
