--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1>Kuldeep Pal</h1>
             <h2>System Software Engineer</h2>
             <h3>Machine Learning Practitioner</h3>
-            <a href="https://drive.google.com/open?id=1yDLn0OOQm8beEe1Zg0TGABAvAzJKxqV6" class="btn-rounded-white">Download Resume</a>
+            <a href="https://www.dropbox.com/s/jrewkzoo5b57zuo/Kuldeep_ML.pdf?dl=0" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
