--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <p>
                             Medicare Reprotech is a Web Application to take reports of patients in an efficient manner so that the patient and doctor both not have to handle reports and these reports will be available to him/her on authentication.
                         </p>
-                        <a href="#">Will be updated soon</a>
+                        <a href="https://github.com/kuldeep27396/MajorProject">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
