--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1>Kuldeep Pal</h1>
             <h2>System Software Engineer</h2>
             <h3>Machine Learning Practitioner</h3>
-            <a href="https://drive.google.com/file/d/1SA3AecD5mxkdmRsIjMCXUq_hOgMVQZcZ/view?usp=sharing">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1SA3AecD5mxkdmRsIjMCXUq_hOgMVQZcZ/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
